--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,6 +7,12 @@
             "type": "image/png",
             "sizes": "1024x1024",
             "purpose": "maskable"
+        },
+        {
+            "src": "images/logo.png",
+            "type": "image/png",
+            "sizes": "144x144",
+            "purpose": "maskable"
         }
     ],
     "start_url": ".",
