--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,7 +6,7 @@
             "src": "/images/logo.png",
             "type": "image/png",
             "sizes": "144x144",
-            "purpose": "maskable"
+            "purpose": "any"
         }
     ],
     "start_url": ".",
