Fix push notifications

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_KEY=cd74f31f04d31585a62866b8b97edde1
+REACT_APP_PUBLIC_VAPID_KEY=BKAHXtd0IJnmhtfnGJOrMUmlv0ahLTFRMke2o0mg9thlnd-omQPr44VoraGjMVIPHa4YBSiBpaoT3RnlKoQnUTo
